# streamlit_packing_DE24

./: README.md
salaries/: pyproject.toml
salaries/src/salaries/: app.py
salaries/src/salaries/components/: charts.py  filters.py  kpis.py
salaries/src/salaries/pages/: dashboard.py  home.py  raw_data.py
salaries/src/salaries/utils/: constants.py  helpers.py
