[project]
name = "salaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Kjellberg", email = "felix.l.kjellberg@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "streamlit>=1.56.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"